Exercitando todo o conteúdo apresentado no módulo Sintaxe.