@@ -1,18 +1,22 @@
-## Getting Started
+## Sintaxe - Desafio projeto `ContaBanco`
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+    Exercitando todo o conteúdo apresentado no módulo Sintaxe.
 
-## Folder Structure
+###### Usuário:
 
-The workspace contains two folders by default, where:
+1- Abrir o terminal;
+2- Digitar o comando `cd C:\Users\Desktop\caminho\caminho\Dio-Java-basico\ContaBanco\bin`" teclar *Enter*;
+3- Digitar o `java ContaTerminal` (nome do arquivo na pasta bin sem usar o ".class"), 
+    caso apareça mensagem de Error: acompanhada do "Try ... `java --enable-preview`"
+    Basta digitar `java --enable-preview ContaTerminal`  e o programa irá executar corretamente;
+4-A cada interação inserir os seguintes dados:
+        | Atributo  | Tipo     | Exemplo   
+        | --------- | ---------| ------- 
+        | Numero    | Inteiro  | 1021 
+        | Agencia   | Texto    | 067-8
+        | Nome Cliente | Texto    | MARIO ANDRADE
+        | Saldo | Decimal |237.48
 
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
+5- Após isso irar receber uma mensagem concatenando os dados que foram inseridos pelo terminal.
 
-Meanwhile, the compiled output files will be generated in the `bin` folder by default.
 
-> If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
-
-## Dependency Management
-
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
